# cargo-docuserve

./: Cargo.toml  index.html
src/: main.rs  middleware.rs  script.js  server.rs  watchdog.rs  websocket.rs
