[package]
name = "cargo-docuserve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
notify = "5.1.0"
notify-debouncer-mini = "0.2.1"
tera = "1.17.1"
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["fs"] }
