[package]
name = "cargo-docuserve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-http = "3.3.0"
actix-web = "4.3.0"
cargo_metadata = "0.15.3"
futures-util = "0.3.26"
notify = "5.1.0"
notify-debouncer-mini = "0.2.1"
