[package]
name = "cargo-docuserve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-http = "3.3.0"
actix-web = "4.3.0"
actix-web-actors = "4.2.0"
async-stream = "0.3.3"
cargo_metadata = "0.15.3"
futures-util = "0.3.26"
notify = "5.1.0"
notify-debouncer-mini = "0.2.1"
tokio = "1.25.0"
